--- a/PostNLWerktijden&Salaris/app/src/main/AndroidManifest.xml
+++ b/PostNLWerktijden&Salaris/app/src/main/AndroidManifest.xml
@@ -8,26 +8,26 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".Months">
+        <activity android:name=".activities.MonthsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Days">
+        <activity android:name=".activities.DaysActivity">
         </activity>
-        <activity android:name=".Walks">
+        <activity android:name=".activities.WalksActivity">
         </activity>
-        <activity android:name=".AddWalk">
+        <activity android:name=".activities.AddWalkActivity">
         </activity>
-        <activity android:name=".Settings">
+        <activity android:name=".activities.SettingsActivity">
         </activity>
-        <activity android:name=".ContractAndSalary">
+        <activity android:name=".activities.ContractAndSalaryActivity">
         </activity>
-        <activity android:name=".Districts">
+        <activity android:name=".activities.DistrictsActivity">
         </activity>
-        <activity android:name=".AddDistrict">
+        <activity android:name=".activities.AddDistrictActivity">
         </activity>
     </application>
 
