--- a/PostNLWerktijden&Salaris/app/src/main/AndroidManifest.xml
+++ b/PostNLWerktijden&Salaris/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/postnllogo"
+        android:icon="@drawable/mailorange"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
